Alteração do header
Botão "baixar agora"

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,3 +47,9 @@ header nav a {
 header nav a:hover {
     color: var(--cor-branco)
 }
+
+.baixar {
+    color: var(--cor-preta);
+    background-color: var(--cor-branco);
+}
+
